# aws-agentcore-private-apis

./: README.md  cdk.json  pyproject.toml
.kiro/specs/agentic-demos-infra/: design.md  requirements.md  tasks.md
infrastructure/: app.py
infrastructure/openapi/: agentcore-tool-schema-atm.json  agentcore-tool-schema-balance.json  agentcore-tool-schema-datafonos.json  agentcore-tool-schema-investments.json  atm-machines-health-api.json  datafonos-health-api.json  get-balance-api.json  investment-products-api.json
infrastructure/stacks/: agentcore_gateway_adapters_stack.py  api_atm_stack.py  api_balance_stack.py  api_datafonos_stack.py  api_investments_stack.py  bastion_stack.py  endpoints_stack.py  vpc_stack.py
lambdas/adapter_atm/: index.py
lambdas/adapter_balance/: index.py
lambdas/adapter_datafonos/: index.py
lambdas/atm_machines_health/: index.py
lambdas/datafonos_health/: index.py
lambdas/get_balance/: index.py
lambdas/investment_products/: index.py
real-tests/: 00_invoke_mcp_tools_no_auth.py  rufus_bank_agent.py
setup/: populate_atms.py  populate_balances.py  populate_datafonos.py  populate_investments.py
